Actualizacion version por cliente

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <title></title>
-    <style>#image1 {
+    <style>
+        body {
+            margin: 0;
+        }
+        #image1 {
         height: 100%;
         width: 100%;
     }
