Actualizacion version por cliente

--- a/index.html
+++ b/index.html
@@ -2,141 +2,10 @@
 <html>
 <head>
     <title></title>
-    <style>
-        body {
-            margin: 0;
-        }
-        #image1 {
-        height: 100%;
-        width: 100%;
-    }
-
-    #video1 {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-    }</style>
-
-    <script src="http://172.16.0.15/BBINCO/TV/Views/Libraries/jquery-3.2.0.js"></script>
+    <script>
+        window.location.href = 'index.php';
+    </script>
 </head>
 <body>
-<div style="width: 100%;height: 100%;position: fixed; background: #000;'">
-
-    <img id="image1" src="" style="height: 100%;width: 100%;z-index: 1;position: fixed;">
-
-
-</div>
-
-<video id='video1' width='100%' height='100%' autoplay ></video>
-
 </body>
-<script>
-    /* @Creado por: Tania Maldonado
- * @Fecha: Julio 2020
- * @Tipo: Funciones para controlar el layout de contenido por carpeta
- * @Secciones: 2
- * image1 [Imagen]
- * video1 [Video]
- */
-    /*******************************************************************************
-     * Variables generales
-     *******************************************************************************/
-    var ImgSection3     = document.getElementById('image1'),
-        VideoScreen     = document.getElementById('video1'),
-        SliderInterval3 = '',
-        Images          = '',
-        Images3         = [],
-        Index3          = 0,
-        MediaSource     = 'http://172.16.0.15/Multimedia/Tablero/';
-
-    /*******************************************************************************
-     * Contenido multimedia
-     *******************************************************************************/
-
-    function SetConstructor(){
-        $.ajax({
-            type: 'POST',
-            async: false,
-            url: 'http://172.16.0.15/BBINCO/TV/Core/Controllers/Template.php',
-            data: {
-                Option : 'getMultimediaFolder',
-                ModuleName : 'Tablero'
-            },
-            success: function (response){
-                Images = $.parseJSON(response);
-
-                var Index = 0;
-
-                /* Asigna la posicion en el arreglo a un ID */
-                for(Index = 0; Index < Images.length; Index++){
-                    Images3.push(Images[Index]);
-                }
-
-                Index = null;
-            }
-        });
-    }
-
-    SetConstructor();
-
-    function UpdateMultimedia(){
-        SetConstructor();
-    }
-
-    /*******************************************************************************
-     * SECCION 1: PANEL CENTER [Video]
-     *******************************************************************************/
-
-    function Slider3(){
-        if(Images3.length > 0){
-
-            var FileType = Images3[Index3].split('.')[1];
-
-            if(FileType === 'mp4' || FileType === 'mov'){
-                clearTimeout(SliderInterval3);
-
-                ImgSection3.src = '';
-                VideoScreen.style.display = 'inline';
-
-                VideoScreen.src = MediaSource+Images3[Index3];
-
-                VideoScreen.play();
-
-                Index3++;
-
-                if(Index3 > Images3.length - 1){
-                    Index3 = 0;
-                }
-            } else {
-
-                VideoScreen.style.display = 'none';
-
-                ImgSection3.src = MediaSource+Images3[Index3];
-
-                Index3++;
-
-                if(Index3 > Images3.length - 1){
-                    Index3 = 0;
-                }
-            }
-        }
-    }
-
-    Slider3();
-
-    SliderInterval3 = setInterval(Slider3,15000);
-    /*******************************************************************************
-     * Manejador de eventos
-     *******************************************************************************/
-
-    VideoScreen.onended = function() {
-
-        VideoScreen.style.display = 'none';
-
-        Slider3();
-
-        SliderInterval3 = setInterval(Slider3,15000);
-    };
-
-</script>
 </html>
