Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <title></title>
     <script>
-        window.location.href = 'index.php';
+       // window.location.href = 'index.php';
     </script>
 </head>
 <body>
+<div></div>
 </body>
 </html>
