Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </script>
 </head>
 <body>
-<div></div>
+<div style="width: 80%;height: 80%;position: fixed;background: teal;right: 5%;top: 5%;font-size: 60px;text-align: center;padding: 3%;color: #fff;font-family: arial;">SAMSUNG</div>
 </body>
 </html>
