Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <title></title>
     <script>
-       // window.location.href = 'index.php';
+        window.location.href = 'index.php';
     </script>
 </head>
 <body>
-<div style="width: 80%;height: 80%;position: fixed;background: teal;right: 5%;top: 5%;font-size: 60px;text-align: center;padding: 3%;color: #fff;font-family: arial;">SAMSUNG</div>
 </body>
 </html>
