--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title></title>
     <script>
-        window.location.href = 'index.php';
+        alert('Hello');
+        window.location = "/Views/Layouts/Contents/Templates/Dashboard.html";
     </script>
 </head>
 <body>
