Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <title></title>
     <script>
-        alert('Hello');
-        window.location = "/Views/Layouts/Contents/Templates/Dashboard.html";
+        window.location = "index.php";
     </script>
 </head>
 <body>
+</body>
 </body>
 </html>
