Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
 <head>
     <title></title>
-    <script>
-        window.location = "index.php";
-    </script>
 </head>
 <body>
-</body>
+    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" height="1280" width="720" title="BbincoTV"></iframe>
 </body>
 </html>
