Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title></title>
 </head>
 <body>
-    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" height="1280" width="720" title="BbincoTV"></iframe>
+    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV"></iframe>
 </body>
 </html>
