--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title></title>
 </head>
 <body>
-    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV"></iframe>
+    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="896" height="504"  title="BbincoTV" style="border: 8px solid #797777; box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.88);"></iframe>
 </body>
 </html>
