Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title></title>
 </head>
 <body>
+    <div>
+        <img src='Media/Logos/BBN/main_logo.png'>
+    </div>
     <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1024" height="576"  title="BbincoTV" style="border: 8px solid #797777; box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.88);"></iframe>
 </body>
 </html>
