--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html>
 <head>
     <title></title>
+    <style>
+        #BbincoTV {
+            border: 8px solid #797777;
+            box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.88);
+        }
+
+        #Bbinco {
+
+        }
+
+        #Bbinco img {
+            width: 50%;
+        }
+    </style>
 </head>
 <body>
-    <div>
+    <div id="Bbinco">
         <img src='Media/Logos/BBN/main_logo.png'>
     </div>
-    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1024" height="576"  title="BbincoTV" style="border: 8px solid #797777; box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.88);"></iframe>
+    <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1024" height="576"  title="BbincoTV" id="BbincoTV"></iframe>
+
+    <div id="Control">
+        <img src='Media/Logos/BBN/control.png'>
+    </div>
 </body>
 </html>
