Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <title></title>
     <style>
-        
+
         #BbincoTV {
             border: 8px solid #797777;
             box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.88);
+            float: left;
         }
 
         #Container {
@@ -14,12 +15,17 @@
             position: fixed;
         }
 
-        #Bbinco {
-
-        }
-
         #Bbinco img {
             width: 30%;
+        }
+
+        #Control {
+            float: right;
+            padding: 0.5%;
+        }
+
+        #Control img {
+            max-height: 495px;
         }
     </style>
 </head>
