Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
         <div id="Control">
-            <img src='Media/Logos/BBN/control.png'>
+            <img src='Media/Logos/BBN/control-info.png'>
         </div>
     </div>
 </body>
