Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         #Control {
             float: right;
             padding: 0.5%;
+            width: 30%;
         }
 
         #Control img {
-            max-height: 450px;
+            max-height: 720px;
         }
     </style>
 </head>
@@ -37,8 +38,10 @@
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
         <div id="Control">
-            <img src='Media/Logos/BBN/control-info.png'>
+            <img src='Media/Logos/BBN/control.png'>
         </div>
     </div>
+
+    <img src='Media/Logos/BBN/info.png'>
 </body>
 </html>
