Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     </style>
 </head>
 <body>
-    <div id="Bbinco">
+    <div id='Bbinco'>
         <img src='Media/Logos/BBN/main_logo.png'>
     </div>
-    <div id="Container">
+    <div id='Container'>
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
-        <div id="Control">
+        <div id='Control'>
             <img src='Media/Logos/BBN/control.png'>
         </div>
     </div>
