Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         #Container {
             width: 100%;
             position: fixed;
+            height: 80%;
+            overflow: scroll;
+            white-space: nowrap;
         }
 
         #Bbinco img {
@@ -27,6 +30,7 @@
 
         #Control img {
             max-height: 720px;
+            max-width: 400px;
         }
     </style>
 </head>
