--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
             max-height: 720px;
             max-width: 400px;
         }
+
+        #Info  {
+            position: fixed;
+            right: 50%;
+            width: 30%;
+            border-radius: 18px;
+            box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+            opacity: 0.9;
+            top: 30%;
+            display: none;
+        }
+
+        #Control:hover + #Info {
+            display: inline;
+        }
     </style>
 </head>
 <body>
@@ -46,6 +61,6 @@
         </div>
     </div>
 
-    <img src='Media/Logos/BBN/info.png'>
+    <img id='Info' src='Media/Logos/BBN/info.png'>
 </body>
 </html>
