Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id='Container'>
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
-        <div id='Control'>
+        <div id='Control' onclick="this alert('cpmtr');">
             <img src='Media/Logos/BBN/control.png'>
         </div>
     </div>
