--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             display: none;
         }
 
+        #Help{
+            width: 20px;
+        }
+
     </style>
 </head>
 <body>
@@ -53,16 +57,13 @@
     <div id='Container'>
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
-        <div id='Control' onclick='ShowInfo'>
+        <div id='Control'>
             <img src='Media/Logos/BBN/control.png'>
         </div>
     </div>
 
+    <img id='Help' src='Media/Logos/BBN/help.png'>
+
     <img id='Info' src='Media/Logos/BBN/info.png'>
 </body>
-<script>
-    function ShowInfo(){
-        document.getElementById('Info').style.display = 'inline';
-    }
-</script>
 </html>
