Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
         #Info  {
             position: fixed;
-            right: 50%;
-            width: 30%;
+            left: 25%;
+            width: 500px;
             border-radius: 18px;
             box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
             opacity: 0.9;
-            top: 30%;
+            top: 25%;
             display: none;
         }
 
