Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id='Bbinco'>
         <img src='Media/Logos/BBN/main_logo.png'>
     </div>
-    <div id='Container'>
+    <!--div id='Container'>
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
         <div id='Control'>
@@ -67,18 +67,18 @@
 
     <img id='Help' src='Media/Logos/BBN/help.png' onclick="ShowInfo()">
 
-    <img id='Info' src='Media/Logos/BBN/info.png' onclick="CloseInfo()">
+    <img id='Info' src='Media/Logos/BBN/info.png' onclick="CloseInfo()"-->
 </body>
 <script>
-    var Help = document.getElementById('Help');
-    var Info = document.getElementById('Info');
-
-    function ShowInfo() {
-        Info.style.display = 'inline';
-    }
-
-    function CloseInfo() {
-        Info.style.display = 'none';
-    }
+    // var Help = document.getElementById('Help');
+    // var Info = document.getElementById('Info');
+    //
+    // function ShowInfo() {
+    //     Info.style.display = 'inline';
+    // }
+    //
+    // function CloseInfo() {
+    //     Info.style.display = 'none';
+    // }
 </script>
 </html>
