--- a/index.html
+++ b/index.html
@@ -43,29 +43,224 @@
             top: 25%;
             display: none;
         }
+        
+        .RemoteContainer{
+            width:200px;
+            height: 600px;
+            position: absolute;
+            top: 50%;
+            margin-top: -300px;
+            right: 1%;
+            background: no-repeat center center;
+            background-size: contain;
+            font-size: 1em;
+            border-radius: 70px;
+            background-image: linear-gradient(to bottom right, #000000, #444444);
 
-        #Help{
-            width: 35px;
-            top: 1%;
-            position: fixed;
-            right: 3%;
         }
 
+        .RemoteContainer > table{
+            margin: 0 auto;
+            width: 70%;
+            height: 80%
+        }
+
+        .NumericButton{
+            width: 40px;
+            height: 40px;
+            float:left;
+            border-radius: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .Button{
+            width: 40px;
+            height: 35px;
+            float:left;
+            text-align: center;
+            border-radius: 15px;
+            background-image: linear-gradient(to bottom right, #000000, #cccccc);
+            color: white;
+            line-height: 2.3em;
+            font-family: Arial, Helvetica, sans-serif;
+
+
+
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+        }
+        .ClickedButton{
+            border-radius: 15px;
+            background-image: linear-gradient(to bottom right, #cccccc, #000000);
+        }
+        .Top{
+            line-height: 2.5em;
+            font-size: 0.9em;
+        }
+
+        .Middle{
+            line-height: 2.3em;
+        }
+
+
+        #Up{
+            margin: 5px;
+            width: 0;
+            height: 0;
+            border-right: 16px solid transparent;
+            border-left: 16px solid transparent;
+            border-bottom: 20px solid whitesmoke;
+            opacity: 0.5;
+        }
+
+        #Down{
+            margin: 5px;
+            margin-top: 10px;
+            width: 0;
+            height: 0;
+            border-right: 16px solid transparent;
+            border-left: 16px solid transparent;
+            border-top: 20px solid whitesmoke;
+            opacity: 0.5;
+        }
+
+        #Left{
+            margin-left: 7px;
+            margin-top: 2px;
+            width: 0;
+            height: 0;
+            border-top: 16px solid transparent;
+            border-bottom: 16px solid transparent;
+            border-right: 20px solid whitesmoke;
+            opacity: 0.5;
+        }
+
+        #Right{
+            margin-left: 14px;
+            margin-top: 2px;
+            width: 0;
+            height: 0;
+            border-top: 16px solid transparent;
+            border-bottom: 16px solid transparent;
+            border-left: 20px solid whitesmoke;
+            opacity: 0.5;
+        }
+
+        #ChannelUp{
+            font-weight: bold;
+            font-size: 2.5em;
+            line-height: 0.95em;
+        }
+
+        #ChannelDown{
+            font-weight: bold;
+            font-size: 2.5em;
+            line-height: 0.75em;
+        }
+
+        #Channel{
+            line-height: 2.3em;
+            background-image: unset ;
+        }
+
+        #Guide{
+            font-size: 0.9em;
+            line-height: 2.6em;
+        }
+
+        #Frame {
+            position: absolute;
+            top: 50%;
+            margin-top: -360px;
+            border: solid rgba(255, 255, 255, 0.3) 5px;
+            pointer-events: none;
+            margin-left: 1%;
+        }
     </style>
 </head>
 <body>
     <div id='Bbinco'>
         <img src='Media/Logos/BBN/main_logo.png'>
     </div>
-    <!--div id='Container'>
+    <div id='Container'>
         <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1280" height="720"  title="BbincoTV" id="BbincoTV"></iframe>
 
-        <div id='Control'>
-            <img src='Media/Logos/BBN/control.png'>
+        <div class='RemoteContainer' id='RemoteContainer'>
+            <table>
+                <tr class='TopSpacer'>
+                    <!--Spacer-->
+                </tr>
+                <tr>
+                    <td><div class = 'Button Top' id='Back'>Back</div></td>
+                    <td><div class = 'Button Top' id='Menu'>Menu</div></td>
+                    <td><div class = 'Button Top' id='Info'>Info</div></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><div class = 'Button Up'><div id='Up'></div></div></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><div class = 'Button Middle'><div id='Left'></div></div></td>
+                    <td><div class = 'Button Middle'><div id='Ok'>OK</td>
+                    <td><div class = 'Button Middle'><div id='Right'></div></div></td>
+                </tr>
+                <tr>
+                    <td><i></i></td>
+                    <td><div class = 'Button Down'><div id='Down'></div></div></td>
+                    <td><i></i></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><div class = 'Button Bottom' id='Guide'>Guide</div></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><div class = 'Button' id='ChannelUp'>+</div></td>
+                    <td><div class = 'Button' id='Channel'>CH</div></td>
+                    <td><div class = 'Button' id='ChannelDown'>-</div></td>
+                </tr>
+                <tr class='ChannelButtonsLimit'>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                <tr class='Spacer'>
+                    <!--Spacer-->
+                </tr>
+                <td><div class = 'NumericButton Button' id='1'>1</div></td>
+                <td><div class = 'NumericButton Button' id='2'>2</div></td>
+                <td><div class = 'NumericButton Button' id='3'>3</div></td>
+                </tr>
+                <tr>
+                    <td><div class = 'NumericButton Button' id='4'>4</div></td>
+                    <td><div class = 'NumericButton Button' id='5'>5</div></td>
+                    <td><div class = 'NumericButton Button' id='6'>6</div></td>
+                </tr>
+                <tr>
+                    <td><div class = 'NumericButton Button' id='7'>7</div></td>
+                    <td><div class = 'NumericButton Button' id='8'>8</div></td>
+                    <td><div class = 'NumericButton Button' id='9'>9</div></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><div class = 'NumericButton Button' id='0'>0</div></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
+        <!--div id='Control'>
+            <img src='Media/Logos/BBN/control.png'>
+        </div-->
     </div>
 
-    <img id='Help' src='Media/Logos/BBN/help.png' onclick="ShowInfo()">
+    <!--img id='Help' src='Media/Logos/BBN/help.png' onclick="ShowInfo()">
 
     <img id='Info' src='Media/Logos/BBN/info.png' onclick="CloseInfo()"-->
 </body>
