--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             max-width: 400px;
         }
 
-        #Info  {
-            position: fixed;
-            left: 25%;
-            width: 500px;
-            border-radius: 18px;
-            box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-            opacity: 0.9;
-            top: 25%;
-            display: none;
-        }
-        
+        /*#Info  {*/
+        /*    position: fixed;*/
+        /*    left: 25%;*/
+        /*    width: 500px;*/
+        /*    border-radius: 18px;*/
+        /*    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);*/
+        /*    opacity: 0.9;*/
+        /*    top: 25%;*/
+        /*    display: none;*/
+        /*}*/
+
         .RemoteContainer{
             width:200px;
             height: 600px;
