Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
      * Inicialización de variables
      *********************************************/
     var
-        Frame               = document.getElementById('Frame'),
+        Frame               = document.getElementById('BbincoTV'),
         Menu                = document.getElementById('Menu'),
         Info                = document.getElementById('Info'),
         Left                = document.getElementById('Left').parentElement,
