Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="Views/Scripts/Control.js"></script>
+    <script src="Views/Vendors/Generic/Keys.js"></script>
     <style>
 
         #BbincoTV {
