Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <script src="Views/Libraries/jquery-1.12.3.min.js"></script>
     <script src="Views/Vendors/Generic/Keys.js"></script>
     <style>
 
