Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -278,6 +278,13 @@
     //     Info.style.display = 'none';
     // }
 
+    /*******************************************************************************
+     * Función para ejecutar los eventos de las teclas en Pantalla de Vendor = Generic
+     *******************************************************************************/
+    function MakeEvent(key){
+        document.dispatchEvent(new KeyboardEvent('keydown', {'keyCode':key, 'which':key}));
+    }
+    
     /********************************************
      * Inicialización de variables
      *********************************************/
