Actualizacion EPG y PVR

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <script src="Views/Libraries/jquery-1.12.3.min.js"></script>
     <script src="Views/Vendors/Generic/Keys.js"></script>
     <style>
+        body{
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            margin: 0;
+            padding: 0;
+        }
+
+        #Bbinco {
+            height: 15%;
+        }
 
         #BbincoTV {
             border: 8px solid #797777;
@@ -190,7 +201,7 @@
         <img src='Media/Logos/BBN/main_logo.png'>
     </div>
     <div id='Container'>
-        <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1088" height="612"  title="BbincoTV" id="BbincoTV"></iframe>
+        <iframe src="http://201.116.203.114/BBINCO/TV/index.php" width="1180" height="580"  title="BbincoTV" id="BbincoTV"></iframe>
 
         <div class='RemoteContainer' id='RemoteContainer'>
             <table>
