--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             background: no-repeat center center;
             background-size: contain;
             font-size: 1em;
-            border-radius: 70px;
-            background-image: linear-gradient(to bottom right, #000000, #444444);
+            border-radius: 15px;
+            background-image: linear-gradient(to top, #000, #444);
 
         }
 
@@ -92,8 +92,8 @@
             height: 35px;
             float:left;
             text-align: center;
-            border-radius: 15px;
-            background-image: linear-gradient(to bottom right, #000000, #cccccc);
+            /*border-radius: 15px;*/
+            /*background-image: linear-gradient(to bottom right, #000000, #cccccc);*/
             color: white;
             line-height: 2.3em;
             font-family: Arial, Helvetica, sans-serif;
@@ -109,7 +109,7 @@
         }
         .ClickedButton{
             border-radius: 15px;
-            background-image: linear-gradient(to bottom right, #cccccc, #000000);
+            background-image: linear-gradient(to bottom right, #0b0b0b, #1a2a5c);
         }
         .Top{
             line-height: 2.5em;
@@ -209,7 +209,7 @@
                     <!--Spacer-->
                 </tr>
                 <tr>
-                    <td><div class = 'Button Top' id='Back'>Back</div></td>
+                    <td><div class = 'Button Top' id='Back'>Close</div></td>
                     <td><div class = 'Button Top' id='Menu'>Menu</div></td>
                     <td><div class = 'Button Top' id='Info'>Info</div></td>
                 </tr>
