Actualizacion EPG y PVR

--- a/tv.html
+++ b/tv.html
@@ -321,7 +321,7 @@
         var Host = self.location.host;
 
           Frame.src = 'http://'+Host+'/BBINCO/TV/index.php';
-          console.log('http://'+Host+'/BBINCO/TV/index.php');
+          console.log('----> http://'+Host+'/BBINCO/TV/index.php');
 
   /*********************************************
    * Creadores de eventos para control remoto
