--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Contiene la cabecera de los modulos-->
 <html>
 <head>
-    <script src='/Views/Libraries/jquery-3.2.0.js'></script>
+    <script src='./Views/Libraries/jquery-3.2.0.js'></script>
     <script>
 
         var Libraries = '';
