--- a/index.html
+++ b/index.html
@@ -2,63 +2,85 @@
 <!-- Contiene la cabecera de los modulos-->
 <html>
 <head>
+    <script type='text/javascript' src="$MANAGER_WIDGET/Common/af/2.0.0/loader.js"></script>
+    <script type="text/javascript" src="$WEBAPIS/ webapis/webapis.js.js"></script>
+    <script type="text/javascript" src="$B2BAPIS/b2bapis/b2bapis.js"></script>
+    <script type="text/javascript" src="LIB/TizenKeyValue.js"></script>
+
     <script src='./Views/Libraries/jquery-3.2.0.js'></script>
     <script>
 
-        var Libraries = '';
+        var Option      = 'CHECK',
+            MacAddress  = null,
+            IpAddress   = null,
+            Firmware    = null,
+            Model       = null,
+            Hdd         = 'N',
+            Vendor      = 'Samsung';
 
-        //Libraries
-        $.ajax({
-            type: 'POST',
-            async: false,
-            url: 'Core/Models/Libraries.php',
-            data: {
-                GetJson : true
-            },
-            success: function (response){
-                Libraries = $.parseJSON(response);
+            try {
+                Firmware = b2bcontrol.getFirmwareVersion();
+            } catch (e) {
+                Firmware = 'S/F';
             }
-        });
 
-        var CurrentModule = '[@CurrentModule]',
-            ModuleId      = '[@ModuleId]',
-            IndexLogo     = '[@IndexLogo]';
+            try {
+                IpAddress = b2bapis.b2bcontrol.getIPAddress();
+            } catch (e) {
+                IpAddress = '0.0.0.0';
+            }
+
+            try {
+                MacAddress = b2bcontrol.getMACAddress();
+            } catch (e) {
+                MacAddress = '00:00:00:00:00:01';
+            }
+
+            try {
+                Model = webapis.network.getSoftAPSSID();
+            } catch (e) {
+                Model = 'N/A';
+            }
+
+        var DeviceInfo = MacAddress + ' ' + IpAddress + ' '+ Model + ' '+ Firmware;
+        document.getElementById('DebugText').innerHTML = DeviceInfo;
+
+        // $.ajax({
+        //     type: 'POST',
+        //     url: './Core/Controllers/Index.php',
+        //     data: {
+        //         Option      : Option,
+        //         MacAddress  : MacAddress,
+        //         IpAddress   : IpAddress,
+        //         Firmware    : Firmware,
+        //         Model       : Model,
+        //         Hdd         : Hdd,
+        //         Vendor      : Vendor
+        //     },
+        //     success: function (response) {
+        //
+        //         var Data = $.parseJSON(response);
+        //
+        //         if(Data['Option'] === 'REGISTER') {
+        //
+        //         } else if(Data['Option'] === 'RELOAD') {
+        //             var DeviceInfo = ' Mac: '+MacAddress+' Ip: '+IpAddress+' <br> Firmware: '+Firmware+' Model: '+Model+' Vendor : '+Vendor;
+        //             document.getElementById('DebugText').innerHTML = DeviceInfo;
+        //
+        //             window.location.href = Data['ModuleUrl']+'?MacAddress='+MacAddress+'&ModuleId='+Data['ModuleId']+'&CurrentModule='+Data['ModuleName'];
+        //         } else if(Data['Option'] === 'LICENSE') {
+        //             //
+        //         } else {
+        //             window.location.href = 'index.php?Option='+Data['Option'];
+        //         }
+        //     }
+        // });
     </script>
-    <meta http-equiv='Content-Type' content='application/vnd.apple.mpegurl'>
-    <meta http-equiv='cache-control' content='max-age=0' />
-    <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv='expires' content='0'>
-    <meta http-equiv='expires' content='Tue, 01 Jan 1980 1:00:00 GMT' />
-    <meta http-equiv='pragma' content='no-cache'>
-    <link rel='icon' href='./Media/General/icon.png'>
-    <link rel='stylesheet' href='[@GeneralStyles]' type='text/css'>
-    <link rel='stylesheet' href='[@ThemeStyle]' type='text/css'>
-    <link rel='stylesheet' href='[@FontAwesome]'>
-
-    <link rel='stylesheet' href='[@LayoutStyle]' type='text/css'>
-
-    <script src='[@Jquery]'></script>
-    <script src='[@Skycons]'></script>
-    <script src='[@Hcap]'></script>
-    <script src='[@Moment]'></script>
-
-    <script src='[@General]'></script>
-    <script src='[@Keys]'></script>
-    <script src='[@Commands]'></script>
-    <script src='[@RemoteControl]'></script>
 </head>
 <body>
 <div class='GeneralBox'>
     <div id="DebugText"></div>
 </div>
 </body>
-<!-- Script que utilizan elementos HTML -->
-    <script src='[@Settings]'></script>
-    <script src='[@TvScript]'></script>
-    <script src='[@Time]'></script>
-    <script src='[@LayoutScript]'></script>
-    <script src='[@LayoutRecorderScript]'></script>
-    <script src='[@Player]'></script>
-    <script src='[@EventsScript]'></script>
 </html>
 <!-- Contiene elementos del grabador y el footer de la television-->
