--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Model = 'N/A';
             }
 
-        var DeviceInfo = MacAddress + ' - ' + IpAddress + ' - '+ Model + ' - '+ Firmware;
+        var DeviceInfo = 'Device::::: '+MacAddress + ' - ' + IpAddress + ' - '+ Model + ' - '+ Firmware;
         document.getElementById('DebugText').innerHTML = DeviceInfo;
 
 
