--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
 	<script type='text/javascript' src='./Views/Vendors/Samsung/Keys.js'></script>
 
-	<link rel='stylesheet' href='./Styles/FontAwesome/css/all.css'>
+	<link rel='stylesheet' href='./Views/Styles/FontAwesome/css/all.css'>
 	<link rel='stylesheet' href='./Styles/index.css'>
 </head>
 <body>
-<div class='ContainerIndex' style="background-image: url('./Media/Logos/init.jpg') ">
+<div class='ContainerIndex' style="background-image: url('./Media/init.jpg') ">
 	<br>
 	<div id='CenterText'><h1></h1></div>
 	<h2 id='DebugText'></h2>
