--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script type='text/javascript' src='./Views/Vendors/Samsung/Keys.js'></script>
 
 	<link rel='stylesheet' href='./Views/Styles/FontAwesome/css/all.css'>
-	<link rel='stylesheet' href='./Styles/index.css'>
+	<link rel='stylesheet' href='./Styles/Index.css'>
 </head>
 <body>
 <div class='ContainerIndex' style="background-image: url('./Media/init.jpg') ">
