--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 	/* !IMPORTANTE! > Cambiar antes de compilar */
 	var ServerIp = '172.16.0.15';
 
+	var Host = self.location.host;
+
+	alert(Host);
+	
 	/* Carga inicial */
 	window.addEventListener('load',SetData,false);
 
