--- a/tv.html
+++ b/tv.html
@@ -30,6 +30,8 @@
         },
         success: function (response) {
             InfoDevice = $.parseJSON(response);
+
+            alert(InfoDevice['ModuleName']);
         }
     });
 
