--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 				Vendor      : 'Samsung'
 			},
 			success: function (response) {
-console.log(response);
+alert('GETINFO SUCCESS');
 				var Data = $.parseJSON(response);
 
 				if(Data['Option'] === 'REGISTER') {
