--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 				Vendor      : 'Samsung'
 			},
 			success: function (response) {
-
+				alert('SUCCESS');
 				var Data = $.parseJSON(response);
 
 				alert(Data['Option']);
