--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type='text/javascript' src='$B2BAPIS/b2bapis/b2bapis.js'></script>
 	<script type='text/javascript' src='$MANAGER_WIDGET/Common/af/2.0.0/loader.js'></script>
 	<script type="text/javascript" src="$WEBAPIS/webapis/webapis.js"></script>
+	<script type='text/javascript' src='./Views/Vendors/Samsung/Server.js'></script> <!-- ACTUALIZAR IP SERVIDOR! -->
 
 	<script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
 	<script type='text/javascript' src='./Views/Vendors/Samsung/Keys.js'></script>
@@ -46,10 +47,6 @@
 
 </body>
 <script>
-	/* !! IMPORTANTE !! */
-
-	var ServerIp = '172.16.0.15';
-
 	/* Carga inicial */
 	window.addEventListener('load',SetData,false);
 
